# guess-me-not

./: .env.template  .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  Makefile  README.md  docker-compose.yml  template.yml
.github/workflows/: deploy.yml
scripts/: assume-role.sh  deploy.sh  set-creds.sh
src/: event.rs  game.rs  main.rs
