[package]
name = "quizlet-api"
version = "0.1.0"
authors = ["Niko <mejia.niko@gmail.com>"]
edition = "2018"
autobins = false

[dependencies]
aws_lambda_events = "0.3.0"
chrono = "0.4.11"
futures = "0.3.5"
lambda = { git = "https://github.com/awslabs/aws-lambda-rust-runtime/", branch = "master"}
serde = "1.0.112"
serde_json = "1.0.55"
serde_derive = "1.0.112"
log = "0.4.8"
rand = "0.7.3"
regex = "1"
rusoto_core = "0.43.0"
rusoto_dynamodb = "0.43.0"
serde_dynamodb = "0.5.0"
simple-error = "0.2.1"
simple_logger = "1.6.0"
tokio = { version = "0.2", features = ["macros"] }

[[bin]]
name = "bootstrap"
path = "src/main.rs"
